# fermyon-spin-eval

./: .gitignore  README.md  spin.toml
factorization-compute/: Cargo.toml
factorization-compute/src/: lib.rs
factorization-statemachine/: package-lock.json  package.json
factorization-statemachine/src/: index.js
