[package]
name = "factorization-compute"
authors = ["dominik"]
description = "Computes numbers factors"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"

[workspace]
